fix body spacing

--- a/static/css/abundantlysocial.css
+++ b/static/css/abundantlysocial.css
@@ -1,6 +1,6 @@
 body {
   min-height: 100vh;
-  padding-top: 85px;
+  padding-top: 97px;
   /* background-color: var(--background); */
   font-family: Lato, sans-serif;
   color: var(--text-color);
